# roommind

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  data.json  pyproject.toml  requirements-dev.txt
.devcontainer/: configuration.yaml  devcontainer.json  setup.sh
.github/: dependabot.yml
frontend/: package-lock.json  package.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_260372de4d6d50b3_compressor_group_manager_py.html  z_260372de4d6d50b3_cover_manager_py.html  z_260372de4d6d50b3_cover_orchestrator_py.html  z_260372de4d6d50b3_ekf_training_manager_py.html  z_260372de4d6d50b3_heat_source_orchestrator_py.html  z_260372de4d6d50b3_mold_manager_py.html  z_260372de4d6d50b3_residual_heat_tracker_py.html  z_260372de4d6d50b3_valve_manager_py.html  z_260372de4d6d50b3_weather_manager_py.html  z_260372de4d6d50b3_window_manager_py.html  z_4db10c526d707b88_analytics_simulator_py.html  z_4db10c526d707b88_mpc_controller_py.html  z_4db10c526d707b88_mpc_optimizer_py.html  z_4db10c526d707b88_residual_heat_py.html  z_4db10c526d707b88_solar_py.html  z_4db10c526d707b88_thermal_model_py.html  z_747bfac8990f5e8b_device_utils_py.html  z_747bfac8990f5e8b_history_store_py.html  z_747bfac8990f5e8b_mold_utils_py.html  z_747bfac8990f5e8b_notification_utils_py.html  z_747bfac8990f5e8b_presence_utils_py.html  z_747bfac8990f5e8b_schedule_utils_py.html  z_747bfac8990f5e8b_sensor_utils_py.html  z_747bfac8990f5e8b_temp_utils_py.html  z_e1a10107a084a5d3___init___py.html  z_e1a10107a084a5d3_analytics_simulator_py.html  z_e1a10107a084a5d3_binary_sensor_py.html  z_e1a10107a084a5d3_climate_py.html  z_e1a10107a084a5d3_config_flow_py.html  z_e1a10107a084a5d3_const_py.html  z_e1a10107a084a5d3_coordinator_py.html  z_e1a10107a084a5d3_diagnostics_py.html  z_e1a10107a084a5d3_history_store_py.html  z_e1a10107a084a5d3_mold_utils_py.html  z_e1a10107a084a5d3_mpc_controller_py.html  z_e1a10107a084a5d3_mpc_optimizer_py.html  (+14 more)
tests/: conftest.py  test_analytics_service.py  test_analytics_simulator.py  test_binary_sensor.py  test_climate.py  test_coordinator.py  test_cover_manager.py  test_device_utils.py  test_diagnostics.py  test_mold_utils.py  (+22 more)
(+142 files in other folders)
