[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "roommind"
version = "1.5.0-beta.1"
requires-python = ">=3.12"
description = "RoomMind – smart room climate control for Home Assistant"
license = {text = "MIT"}

dependencies = [
    "homeassistant>=2024.1.0",
    "voluptuous>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "pytest-homeassistant-custom-component>=0.13",
    "pytest-aiohttp>=1.0",
    "pytest-freezer>=0.4",
    "pytest-socket>=0.7",
    "pytest-sugar>=1.0",
    "pytest-timeout>=2.4",
    "pytest-unordered>=0.7",
    "pytest-xdist>=3.8",
    "ruff>=0.15",
    "mypy>=1.19",
]
mutation = [
    "mutmut>=3.5",
]

# --------------------------------------------------------------------------- #
# Tool configuration
# --------------------------------------------------------------------------- #

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "PLC",  # pylint convention
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
]
ignore = [
    "E501",     # line too long (handled by formatter)
    "PLC0415",  # import not at top level (intentional lazy imports)
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.roommind"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "homeassistant.*"
follow_imports = "skip"

[tool.coverage.run]
relative_files = true

[tool.mutmut]
paths_to_mutate = ["custom_components/roommind/"]
tests_dir = ["tests/"]
do_not_mutate = [
    "**/const.py",        # constants, no logic
    "**/config_flow.py",  # HA boilerplate
    "**/__init__.py",     # setup/registration, tested via integration
]
